# FilterDesigner

./: .gitignore  AFD_test.cpp  CMakeLists.txt  DFD_test.cpp  EllipticFilter.7z  main.cpp  readme.md
include/: EllipticFunction.h  FilterDesign.h  TransferFunction.h  mpreal_ex.h
src/: EllipticDesignDF.cpp  EllipticFunction.cpp  FilterDesign.cpp  FilterDesignAF.cpp  FilterDesignDF.cpp
thirdpart/GMP/lib/: libgmp.la  libgmpxx.la
thirdpart/mpfr/include/: mpreal.h
thirdpart/mpfr/lib/: libmpfr.la
